--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 </header>
 
 <nav>
-  <a href="#">概要</a>
   <a href="#" class="selected">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="#" class="kaikyuu">海急の取り組み</a>
 </nav>
 
-<main>
+<section class="content-area">
   <div class="info-box">
     <p>運行情報</p>
     <p>現在、10分以上の遅延は発生していません</p>
@@ -34,7 +33,14 @@
       <a href="redirect_link2.html">2025.1.1 テストメアハエ</a>
     </div>
   </div>
-</main>
+</section>
+
+<nav>
+  <a href="#" class="selected">運行情報</a>
+  <a href="#">路線図（鉄道）</a>
+  <a href="#">路線図（高速バス・路線バス）</a>
+  <a href="#" class="kaikyuu">海急の取り組み</a>
+</nav>
 
 <footer>
   2025 海急公式サイト
