--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="#" class="selected">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="#" class="kaikyuu">海急の取り組み</a>
+  <a href="#">海急の取り組み</a>
 </nav>
 
 <section class="content-area">
@@ -39,7 +39,7 @@
   <a href="#" class="selected">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="#" class="kaikyuu">海急の取り組み</a>
+  <a href="#">海急の取り組み</a>
 </nav>
 
 <footer>
