--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   新桜・海急公式サイト
 </header>
 
-<nav>
-  <a href="#" class="selected">運行情報</a>
+<nav class="menu-bar">
+  <a href="#" class="current">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="#">海急の取り組み</a>
@@ -27,16 +27,16 @@
   <div class="notice-box">
     <p>お知らせ</p>
     <div class="notice-item">
-      <a href="redirect_link1.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
+      <a href="#">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
     </div>
     <div class="notice-item">
-      <a href="redirect_link2.html">2025.1.1 テストメアハエ</a>
+      <a href="#">2025.1.1 テストメアハエ</a>
     </div>
   </div>
 </section>
 
-<nav>
-  <a href="#" class="selected">運行情報</a>
+<nav class="menu-bar">
+  <a href="#" class="current">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="#">海急の取り組み</a>
