--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </header>
 
 <nav class="menu-bar">
-  <a href="#" class="current">運行情報</a>
+  <a href="#" class="current">運行情報</a> <!-- このリンクに囲みが表示される -->
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="#">海急の取り組み</a>
@@ -34,13 +34,6 @@
     </div>
   </div>
 </section>
-
-<nav class="menu-bar">
-  <a href="#" class="current">運行情報</a>
-  <a href="#">路線図（鉄道）</a>
-  <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="#">海急の取り組み</a>
-</nav>
 
 <footer>
   2025 海急公式サイト
