--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
   </div>
 
   <div class="notice-box">
-    <p>お知らせ</p>
-    <div class="notice-item">
-      <a href="#">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
-    </div>
-    <div class="notice-item">
-      <a href="#">2025.1.1 テストメアハエ</a>
-    </div>
+  <p>お知らせ</p>
+
+  <div class="notice-item">
+    <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
+  </div>
+  <div class="notice-item">
+    <a href="#">2025.1.1 テストメアハエ</a>
+  </div>
+
+</div>
   </div>
 </section>
 
