--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
 </header>
 
 <nav class="menu-bar">
-  <a href="#" class="current">運行情報</a> <!-- このリンクに囲みが表示される -->
+  <a href="#" class="current">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="#">海急の取り組み</a>
 </nav>
 
 <section class="content-area">
+
   <div class="info-box">
     <p>運行情報</p>
     <p>現在、10分以上の遅延は発生していません</p>
   </div>
 
   <div class="notice-box">
-  <p>お知らせ</p>
+    <p>お知らせ</p>
 
-  <div class="notice-item">
-    <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
-  </div>
-  <div class="notice-item">
-    <a href="#">2025.1.1 テストメアハエ</a>
+    <div class="notice-item">
+      <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
+    </div>
+
+    <div class="notice-item">
+      <a href="#">2025.1.1 テストメアハエ</a>
+    </div>
+
   </div>
 
-</div>
-  </div>
 </section>
 
 <footer>
