--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="index.html" class="current">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="effort.html">海急の取り組み</a> <!-- 修正済み！ -->
+  <a href="effort.html">海急の取り組み</a>
 </nav>
 
 <section class="content-area">
