--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="effort.html">海急の取り組み</a>
+  <a href="access.html">主なアクセス案内</a> <!-- 追加部分！！ -->
 </nav>
 
 <section class="content-area">
