--- a/access.html
+++ b/access.html
@@ -16,7 +16,7 @@
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="effort.html">海急の取り組み</a>
-  <a href="access.html" class="current">主なアクセス案内</a> <!-- ここ白枠つける！ -->
+  <a href="access.html" class="current">主なアクセス案内</a> <!-- 選んでるやつだけ白枠 -->
 </nav>
 
 <section class="content-area">
