--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <nav class="menu-bar">
   <a href="index.html" class="current">運行情報</a>
+  <a href="access.html">主なアクセス案内</a> <!-- ←ここに挿入！ -->
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="effort.html">海急の取り組み</a>
-  <a href="access.html">主なアクセス案内</a> <!-- これ追加 -->
 </nav>
 
 <section class="content-area">
