--- a/access.html
+++ b/access.html
@@ -13,10 +13,10 @@
 
 <nav class="menu-bar">
   <a href="index.html">運行情報</a>
+  <a href="access.html" class="current">主なアクセス案内</a> <!-- ←ここもちゃんと順番合わせる！ -->
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="effort.html">海急の取り組み</a>
-  <a href="access.html" class="current">主なアクセス案内</a> <!-- 選んでるやつだけ白枠 -->
 </nav>
 
 <section class="content-area">
