--- a/effort.html
+++ b/effort.html
@@ -12,11 +12,11 @@
 </header>
 
 <nav class="menu-bar">
-  <a href="index.html">運行情報</a>
-  <a href="access.html">主なアクセス案内</a> <!-- ←ここも忘れず！ -->
+  <a href="index.html" class="current">運行情報</a>
+  <a href="access.html">主なアクセス案内</a> <!-- ここがアクセスページへのリンク -->
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="effort.html" class="current">海急の取り組み</a>
+  <a href="effort.html">海急の取り組み</a>
 </nav>
 
 <section class="content-area">
