--- a/access.html
+++ b/access.html
@@ -13,7 +13,7 @@
 
 <nav class="menu-bar">
   <a href="index.html">運行情報</a>
-  <a href="access.html" class="current">主なアクセス案内</a> <!-- ←ここもちゃんと順番合わせる！ -->
+  <a href="access.html" class="current">主なアクセス案内</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="effort.html">海急の取り組み</a>
