--- a/effort.html
+++ b/effort.html
@@ -13,7 +13,7 @@
 
 <nav class="menu-bar">
   <a href="index.html" class="current">運行情報</a>
-  <a href="access.html">主なアクセス案内</a> <!-- ここがアクセスページへのリンク -->
+  <a href="access.html">主なアクセス案内</a> 
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
   <a href="effort.html">海急の取り組み</a>
