--- a/access.html
+++ b/access.html
@@ -2,37 +2,37 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>主なアクセス案内｜新桜・海急公式サイト</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>主なアクセス案内</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  新桜・海急公式サイト
-</header>
+  <!-- ヘッダー -->
+  <header>
+    新桜・海急公式サイト
+  </header>
 
-<nav class="menu-bar">
-  <a href="index.html" class="current">運行情報</a>
-  <a href="access.html">主なアクセス案内</a> 
-  <a href="#">路線図（鉄道）</a>
-  <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="effort.html">海急の取り組み</a>
-</nav>
+  <!-- ナビゲーションバー -->
+  <nav class="menu-bar">
+    <a href="index.html">運行情報</a>
+    <a href="railway_map.html">路線図（鉄道）</a>
+    <a href="bus_map.html">路線図（高速バス・路線バス）</a>
+    <a href="effort.html">海急の取り組み</a>
+    <a href="access.html" class="current">主なアクセス案内</a>
+  </nav>
 
-<section class="content-area">
-
-  <div class="info-box">
+  <!-- コンテンツエリア -->
+  <div class="content-area">
     <h2>主なアクセス案内</h2>
-    <p>めあはえ</p>
-    <p>うんちくえ！</p>
-    <p>※テストですよ</p>
+    <p>新桜・海急のアクセス情報をご案内します。</p>
+    <!-- 詳細情報 -->
   </div>
 
-</section>
-
-<footer>
-  2025 海急公式サイト
-</footer>
+  <!-- フッター -->
+  <footer>
+    2025 海急公式サイト
+  </footer>
 
 </body>
 </html>
