--- a/effort.html
+++ b/effort.html
@@ -2,63 +2,57 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>海急の取り組み</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  新桜・海急公式サイト
-</header>
+  <!-- ヘッダー -->
+  <header>
+    新桜・海急公式サイト
+  </header>
 
-<nav class="menu-bar">
-  <a href="index.html" class="current">運行情報</a>
-  <a href="access.html">主なアクセス案内</a> 
-  <a href="#">路線図（鉄道）</a>
-  <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="effort.html">海急の取り組み</a>
-</nav>
+  <!-- ナビゲーションバー -->
+  <nav class="menu-bar">
+    <a href="index.html">運行情報</a>
+    <a href="railway_map.html">路線図（鉄道）</a>
+    <a href="bus_map.html">路線図（高速バス・路線バス）</a>
+    <a href="effort.html" class="current">海急の取り組み</a>
+    <a href="access.html">主なアクセス案内</a>
+  </nav>
 
-<section class="content-area">
-
-  <div class="news-detail">
-    <h1>海急の取り組み</h1>
-
-    <h2>高速道路建設</h2>
+  <!-- コンテンツエリア -->
+  <div class="content-area">
+    <h2>海急の取り組み</h2>
+    
+    <h3>高速道路建設</h3>
     <p>海急グループでは新桜での高速道路建設を行っています。また、過去に作られた低品質な高速道路の解体も行っています。</p>
-
-    <h3>主な路線</h3>
     <ul>
       <li>1号線</li>
       <li>4号線</li>
       <li>新海場高速道路（海府高速）</li>
       <li>（華島）首都環状線</li>
-      <li>etc</li>
     </ul>
 
-    <h2>鉄道の建設</h2>
+    <h3>鉄道の建設</h3>
     <p>海急グループでは新桜での在来線及び地下鉄線の建設を行っています。また、他社線との直通計画についても協議を進めています。</p>
-
-    <h3>主な路線</h3>
     <ul>
       <li>海急海浜線</li>
       <li>海急青浜線</li>
       <li>海急水町線</li>
       <li>地下鉄都心線</li>
       <li>地下鉄東橋線</li>
-      <li>etc</li>
     </ul>
 
-    <h2>新海場新幹線の建設</h2>
+    <h3>新海場新幹線の建設</h3>
     <p>在来線や地下鉄に食わせて新海場新幹線（高速道路）の建設支援も行っています。</p>
-
   </div>
 
-</section>
-
-<footer>
-  2025 海急公式サイト
-</footer>
+  <!-- フッター -->
+  <footer>
+    2025 海急公式サイト
+  </footer>
 
 </body>
 </html>
