--- a/news_20250413.html
+++ b/news_20250413.html
@@ -2,36 +2,49 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2025.4.13 華島万博開催に伴う臨時バス運行について</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  新桜・海急公式サイト
-</header>
+  <!-- ヘッダー -->
+  <header>
+    新桜・海急公式サイト
+  </header>
 
-<nav class="menu-bar">
-  <a href="#">運行情報</a>
-  <a href="#">路線図（鉄道）</a>
-  <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="#">海急の取り組み</a>
-</nav>
+  <!-- ナビゲーションバー -->
+  <nav class="menu-bar">
+    <a href="index.html">運行情報</a>
+    <a href="railway_map.html">路線図（鉄道）</a>
+    <a href="bus_map.html">路線図（高速バス・路線バス）</a>
+    <a href="effort.html">海急の取り組み</a>
+    <a href="access.html">主なアクセス案内</a>
+  </nav>
 
-<section class="content-area">
-  <div class="news-detail">
-    <h1>2025.4.13 華島万博開催に伴う臨時バス運行について</h1>
+  <!-- コンテンツエリア -->
+  <div class="content-area">
+    <h2>2025.4.13 華島万博開催に伴う臨時バス運行について</h2>
+    
     <p>本日4/13から華島万博がドリームアイランドで開催されることに伴って、臨時シャトルバスを運行いたします。</p>
-    <p><strong>始発駅:</strong> 新海場駅、佐華駅、北海場駅、石崎駅</p>
-    <p><strong>経由駅:</strong> 海橋町駅（※北海場始発のみ）</p>
-    <p>予約等は不要で、全車自由席です。</p>
-    <p>また大変混雑することが予想されますので、新海場駅からご利用のお客様は、地下鉄も合わせてご利用ください。</p>
-  </div>
-</section>
+    
+    <h3>始発駅</h3>
+    <p>新海場駅、佐華駅、北海場駅、石崎駅</p>
 
-<footer>
-  2025 海急公式サイト
-</footer>
+    <h3>経由駅</h3>
+    <p>海橋町駅（※北海場始発のみ）</p>
+
+    <h3>予約等</h3>
+    <p>予約等は不要で、全車自由席です。</p>
+
+    <h3>混雑予想</h3>
+    <p>大変混雑することが予想されますので、新海場駅からご利用のお客様は、地下鉄も合わせてご利用ください。</p>
+  </div>
+
+  <!-- フッター -->
+  <footer>
+    2025 海急公式サイト
+  </footer>
 
 </body>
 </html>
