--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <a href="index.html" class="current">運行情報</a>
   <a href="#">路線図（鉄道）</a>
   <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="effort.html">海急の取り組み</a> <!-- 修正済み！ -->
+  <a href="effort.html">海急の取り組み</a>
 </nav>
 
 <section class="content-area">
 
   <div class="info-box">
-    <h2>運行情報</h2>
+    <p>運行情報</p>
     <p>現在、10分以上の遅延は発生していません</p>
   </div>
 
   <div class="notice-box">
-    <h2>お知らせ</h2>
+    <p>お知らせ</p>
 
     <div class="notice-item">
       <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
