--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   新桜・海急公式サイト
 </header>
 
-<nav class="menu-bar">
-  <a href="index.html" class="current">運行情報</a>
-  <a href="#">路線図（鉄道）</a>
-  <a href="#">路線図（高速バス・路線バス）</a>
-  <a href="effort.html">海急の取り組み</a>
-</nav>
+<div class="menu-bar">
+  <a href="#運行情報" class="menu-item current selected">運行情報</a>
+  <a href="#アクセス案内" class="menu-item">主なアクセス案内</a>
+  <a href="#鉄道路線図" class="menu-item">路線図（鉄道）</a>
+  <a href="#バス路線図" class="menu-item">路線図（高速バス・路線バス）</a>
+  <a href="#海急の取り組み" class="menu-item">海急の取り組み</a>
+</div>
 
 <section class="content-area">
 
