--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </header>
 
   <nav class="menu-bar">
-    <a href="#運行情報" class="menu-item selected">運行情報</a>
-    <a href="#主なアクセス案内" class="menu-item">主なアクセス案内</a>
-    <a href="#路線図鉄道" class="menu-item">路線図（鉄道）</a>
-    <a href="#路線図バス" class="menu-item">路線図（高速バス・路線バス）</a>
-    <a href="#海急の取り組み" class="menu-item">海急の取り組み</a>
+    <a href="index.html" class="menu-item selected">運行情報</a>
+    <a href="access.html" class="menu-item">主なアクセス案内</a>
+    <a href="路線図鉄道" class="menu-item">路線図（鉄道）</a>
+    <a href="路線図バス" class="menu-item">路線図（高速バス・路線バス）</a>
+    <a href="effort.html" class="menu-item">海急の取り組み</a>
   </nav>
 
   <div id="運行情報" class="content-box selected">
