--- a/index.html
+++ b/index.html
@@ -13,24 +13,16 @@
   </header>
 
   <nav class="menu-bar">
-    <a href="index.html" class="menu-item selected">運行情報</a>
-    <a href="access.html" class="menu-item">主なアクセス案内</a>
-    <a href="路線図鉄道" class="menu-item">路線図（鉄道）</a>
-    <a href="路線図バス" class="menu-item">路線図（高速バス・路線バス）</a>
-    <a href="effort.html" class="menu-item">海急の取り組み</a>
+    <a href="#運行情報" class="menu-item selected">運行情報</a>
+    <a href="#路線図鉄道" class="menu-item">路線図（鉄道）</a>
+    <a href="#路線図バス" class="menu-item">路線図（高速バス・路線バス）</a>
+    <a href="#海急の取り組み" class="menu-item">海急の取り組み</a>
   </nav>
 
   <div id="運行情報" class="content-box selected">
     <div class="info-box">
       <h2>運行情報</h2>
       <p>現在、10分以上の遅延は発生していません</p>
-    </div>
-  </div>
-
-  <div id="主なアクセス案内" class="content-box">
-    <div class="info-box">
-      <h2>主なアクセス案内</h2>
-      <p>お知らせ内容の例</p>
     </div>
   </div>
 
@@ -59,24 +51,20 @@
     <p>&copy; 2025 海急公式サイト</p>
   </footer>
 
-  <!-- 各ページへのリンク -->
   <script>
     const menuItems = document.querySelectorAll('.menu-item');
     menuItems.forEach(item => {
       item.addEventListener('click', (event) => {
-        event.preventDefault(); // デフォルトのリンク動作を無効化
-        const targetId = item.getAttribute('href').substring(1); // #以降のIDを取得
+        event.preventDefault();
+        const targetId = item.getAttribute('href').substring(1);
         const targetElement = document.getElementById(targetId);
 
-        // 全てのコンテンツボックスを非表示
         document.querySelectorAll('.content-box').forEach(content => {
           content.classList.remove('selected');
         });
 
-        // 対象のコンテンツボックスを表示
         targetElement.classList.add('selected');
 
-        // メニューの選択状態を変更
         menuItems.forEach(link => link.classList.remove('selected'));
         item.classList.add('selected');
       });
