--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <div id="主なアクセス案内" class="content-box">
     <div class="info-box">
       <h2>主なアクセス案内</h2>
-      <p>詳細なアクセス情報がここに表示されます。</p>
+      <p>めあはえ</p>
+      <p>うんちくえ！</p>
+      <p>※テストですよ</p>
     </div>
   </div>
 
