--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <!-- メニュー部分 -->
   <nav class="menu-bar">
     <a href="#運行情報" class="menu-item selected">運行情報</a>
-    <a href="#主なアクセス案内" class="menu-item">主なアクセス案内</a>
-    <a href="#路線図鉄道" class="menu-item">路線図（鉄道）</a>
-    <a href="#路線図バス" class="menu-item">路線図（高速バス・路線バス）</a>
-    <a href="#海急の取り組み" class="menu-item">海急の取り組み</a>
+    <a href="access.html" class="menu-item">主なアクセス案内</a>
+    <a href="railway_map.html" class="menu-item">路線図（鉄道）</a>
+    <a href="bus_map.html" class="menu-item">路線図（高速バス・路線バス）</a>
+    <a href="effort.html" class="menu-item">海急の取り組み</a>
   </nav>
 
   <!-- コンテンツ部分 -->
@@ -29,33 +29,13 @@
     </div>
   </div>
 
-  <div id="主なアクセス案内" class="content-box">
+  <div id="お知らせ" class="content-box">
     <div class="info-box">
-      <h2>主なアクセス案内</h2>
-      <p>めあはえ</p>
-      <p>うんちくえ！</p>
-      <p>※テストですよ</p>
-    </div>
-  </div>
-
-  <div id="路線図鉄道" class="content-box">
-    <div class="info-box">
-      <h2>路線図（鉄道）</h2>
-      <p>鉄道の路線図の内容</p>
-    </div>
-  </div>
-
-  <div id="路線図バス" class="content-box">
-    <div class="info-box">
-      <h2>路線図（高速バス・路線バス）</h2>
-      <p>バスの路線図の内容</p>
-    </div>
-  </div>
-
-  <div id="海急の取り組み" class="content-box">
-    <div class="info-box">
-      <h2>海急の取り組み</h2>
-      <p>海急の取り組みの内容</p>
+      <h2>お知らせ</h2>
+      <ul>
+        <li><a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a></li>
+        <li><a href="#">2025.1.1 テストメアハエ</a></li>
+      </ul>
     </div>
   </div>
 
