--- a/access.html
+++ b/access.html
@@ -3,35 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>主なアクセス案内</title>
+  <title>2025.4.13 華島万博開催に伴う臨時バス運行について</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- ヘッダー -->
   <header>
-    新桜・海急公式サイト
+    <h1>2025.4.13 華島万博開催に伴う臨時バス運行について</h1>
   </header>
 
-  <!-- ナビゲーションバー -->
   <nav class="menu-bar">
-    <a href="index.html">運行情報</a>
-    <a href="railway_map.html">路線図（鉄道）</a>
-    <a href="bus_map.html">路線図（高速バス・路線バス）</a>
-    <a href="effort.html">海急の取り組み</a>
-    <a href="access.html" class="current">主なアクセス案内</a>
+    <a href="index.html" class="menu-item">トップ</a>
+    <a href="access.html" class="menu-item">主なアクセス案内</a>
+    <a href="railway_map.html" class="menu-item">路線図（鉄道）</a>
+    <a href="bus_map.html" class="menu-item">路線図（高速バス・路線バス）</a>
+    <a href="effort.html" class="menu-item">海急の取り組み</a>
   </nav>
 
-  <!-- コンテンツエリア -->
-  <div class="content-area">
-    <h2>主なアクセス案内</h2>
-    <p>新桜・海急のアクセス情報をご案内します。</p>
-    <!-- 詳細情報 -->
+  <div class="content-box">
+    <h2>臨時バス運行について</h2>
+    <p>本日4/13から華島万博がドリームアイランドで開催されることに伴って、臨時シャトルバスを運行いたします。</p>
+    <h3>始発駅:</h3>
+    <ul>
+      <li>新海場駅</li>
+      <li>佐華駅</li>
+      <li>北海場駅</li>
+      <li>石崎駅</li>
+    </ul>
+    <h3>経由駅:</h3>
+    <ul>
+      <li>海橋町駅※北海場始発のみ</li>
+    </ul>
+    <p>予約等は不要で、全車自由席です。</p>
+    <p>また、大変混雑することが予想されますので、新海場駅からご利用のお客様は地下鉄も合わせてご利用ください。</p>
   </div>
 
-  <!-- フッター -->
   <footer>
-    2025 海急公式サイト
+    <p>&copy; 2025 海急公式サイト</p>
   </footer>
 
 </body>
