--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
       <h2>運行情報</h2>
       <p>現在、10分以上の遅延は発生していません</p>
     </div>
-  </div>
 
-  <div id="お知らせ" class="content-box">
+    <!-- お知らせセクション -->
     <div class="info-box">
-      <h2>お知らせ</h2>
+      <h3>お知らせ</h3>
       <ul>
-        <!-- リダイレクト先をnews_20250413.htmlに設定 -->
         <li><a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a></li>
         <li><a href="#">2025.1.1 テストメアハエ</a></li>
       </ul>
