--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </footer>
 
   <script>
+    // メニューのタブがクリックされた時の処理
     const menuItems = document.querySelectorAll('.menu-item');
     menuItems.forEach(item => {
       item.addEventListener('click', (event) => {
