--- a/index.html
+++ b/index.html
@@ -2,69 +2,95 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>新桜・海急公式サイト</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: sans-serif;
+      color: black;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: white;
+      padding: 1rem;
+      font-size: 1.5rem;
+      text-align: center;
+      font-weight: bold;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      background-color: white;
+      padding: 1rem;
+    }
+    .highlighted {
+      background-color: gray;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+    }
+    main {
+      padding: 1rem;
+    }
+    .section {
+      background-color: #e0f7fa; /* 水色 */
+      border-radius: 10px;
+      padding: 1rem;
+      margin: 1rem 0;
+    }
+    .news-item {
+      margin-bottom: 1rem;
+    }
+    .news-item a {
+      display: block;
+      color: black;
+      text-decoration: none;
+      margin-bottom: 0.5rem;
+    }
+    footer {
+      margin-top: 2rem;
+      text-align: center;
+      padding: 1rem;
+      background-color: white;
+    }
+  </style>
 </head>
 <body>
-
   <header>
-    <h1>新桜・海急公式サイト</h1>
+    新桜・海急公式サイト
   </header>
 
-  <!-- メニュー部分 -->
-  <nav class="menu-bar">
-    <a href="#運行情報" class="menu-item selected">運行情報</a>
-    <a href="access.html" class="menu-item">主なアクセス案内</a>
-    <a href="railway_map.html" class="menu-item">路線図（鉄道）</a>
-    <a href="bus_map.html" class="menu-item">路線図（高速バス・路線バス）</a>
-    <a href="effort.html" class="menu-item">海急の取り組み</a>
+  <nav>
+    <span class="highlighted">運行情報</span>
+    <a href="#">路線図（鉄道）</a>
+    <a href="#">路線図（高速バス・路線バス）</a>
+    <span class="highlighted">海急の取り組み</span>
   </nav>
 
-  <!-- コンテンツ部分 -->
-  <div id="運行情報" class="content-box selected">
-    <div class="info-box">
+  <main>
+    <div class="section">
       <h2>運行情報</h2>
       <p>現在、10分以上の遅延は発生していません</p>
     </div>
 
-    <!-- お知らせセクション -->
-    <div class="info-box">
-      <h3>お知らせ</h3>
-      <ul>
-        <li><a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a></li>
-        <li><a href="#">2025.1.1 テストメアハエ</a></li>
-      </ul>
+    <div class="section">
+      <h2>お知らせ</h2>
+      <div class="news-item">
+        <a href="#">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
+        <a href="#">2025.1.1 テストメアハエ</a>
+      </div>
     </div>
-  </div>
+  </main>
+
+  <nav>
+    <span class="highlighted">運行情報</span>
+    <a href="#">路線図（鉄道）</a>
+    <a href="#">路線図（高速バス・路線バス）</a>
+    <span class="highlighted">海急の取り組み</span>
+  </nav>
 
   <footer>
-    <p>&copy; 2025 海急公式サイト</p>
+    2025　海急公式サイト
   </footer>
-
-  <script>
-    // メニューのタブがクリックされた時の処理
-    const menuItems = document.querySelectorAll('.menu-item');
-    menuItems.forEach(item => {
-      item.addEventListener('click', (event) => {
-        event.preventDefault();
-        const targetId = item.getAttribute('href').substring(1);
-        const targetElement = document.getElementById(targetId);
-
-        // 他のコンテンツを非表示にする
-        document.querySelectorAll('.content-box').forEach(content => {
-          content.classList.remove('selected');
-        });
-
-        // 選択したコンテンツを表示
-        targetElement.classList.add('selected');
-
-        // メニューの選択状態を更新
-        menuItems.forEach(link => link.classList.remove('selected'));
-        item.classList.add('selected');
-      });
-    });
-  </script>
-
 </body>
 </html>
