--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="section">
       <h2>お知らせ</h2>
       <div class="news-item">
-        <a href="#">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
+        <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
         <a href="#">2025.1.1 テストメアハエ</a>
       </div>
     </div>
