--- a/index.html
+++ b/index.html
@@ -3,57 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>新桜・海急公式サイト</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      color: black;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: white;
-      padding: 1rem;
-      font-size: 1.5rem;
-      text-align: center;
-      font-weight: bold;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      background-color: white;
-      padding: 1rem;
-    }
-    .highlighted {
-      background-color: gray;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-    }
-    main {
-      padding: 1rem;
-    }
-    .section {
-      background-color: #e0f7fa; /* 水色 */
-      border-radius: 10px;
-      padding: 1rem;
-      margin: 1rem 0;
-    }
-    .news-item {
-      margin-bottom: 1rem;
-    }
-    .news-item a {
-      display: block;
-      color: black;
-      text-decoration: none;
-      margin-bottom: 0.5rem;
-    }
-    footer {
-      margin-top: 2rem;
-      text-align: center;
-      padding: 1rem;
-      background-color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -61,10 +11,10 @@
   </header>
 
   <nav>
-    <span class="highlighted">運行情報</span>
-    <a href="#">路線図（鉄道）</a>
-    <a href="#">路線図（高速バス・路線バス）</a>
-    <span class="highlighted">海急の取り組み</span>
+    <a href="index.html" class="nav-item selected">運行情報</a>
+    <a href="#" class="nav-item">路線図（鉄道）</a>
+    <a href="#" class="nav-item">路線図（高速バス・路線バス）</a>
+    <span class="nav-item highlighted">海急の取り組み</span>
   </nav>
 
   <main>
@@ -77,16 +27,16 @@
       <h2>お知らせ</h2>
       <div class="news-item">
         <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
-        <a href="#">2025.1.1 テストメアハエ</a>
+        <a href="news_20250101.html">2025.1.1 テストメアハエ</a>
       </div>
     </div>
   </main>
 
   <nav>
-    <span class="highlighted">運行情報</span>
-    <a href="#">路線図（鉄道）</a>
-    <a href="#">路線図（高速バス・路線バス）</a>
-    <span class="highlighted">海急の取り組み</span>
+    <a href="index.html" class="nav-item selected">運行情報</a>
+    <a href="#" class="nav-item">路線図（鉄道）</a>
+    <a href="#" class="nav-item">路線図（高速バス・路線バス）</a>
+    <span class="nav-item highlighted">海急の取り組み</span>
   </nav>
 
   <footer>
