--- a/news_20250413.html
+++ b/news_20250413.html
@@ -18,7 +18,7 @@
   </nav>
 
   <main>
-    <article class="section">
+    <div class="section">
       <h2>2025.4.13 華島万博開催に伴う臨時バス運行について</h2>
       <p>本日4/13から華島万博がドリームアイランドで開催されることに伴って、臨時シャトルバスを運行いたします。</p>
 
@@ -38,8 +38,15 @@
 
       <h3>混雑予想</h3>
       <p>大変混雑することが予想されますので、新海場駅からご利用のお客様は、地下鉄も合わせてご利用ください。</p>
-    </article>
+    </div>
   </main>
+
+  <nav>
+    <a href="index.html" class="nav-item">運行情報</a>
+    <a href="#" class="nav-item">路線図（鉄道）</a>
+    <a href="#" class="nav-item">路線図（高速バス・路線バス）</a>
+    <span class="nav-item highlighted">海急の取り組み</span>
+  </nav>
 
   <footer>
     2025　海急公式サイト
