--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
   </nav>
 
   <main>
-    <div class="section">
+    <section class="info-box">
       <h2>運行情報</h2>
-      <p>現在、10分以上の遅延は発生していません</p>
-    </div>
+      <div class="box">
+        現在、10分以上の遅延は発生していません
+      </div>
+    </section>
 
-    <div class="section">
+    <section class="info-box">
       <h2>お知らせ</h2>
-      <div class="news-item">
-        <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a>
+      <div class="box">
+        <a href="news_20250413.html">2025.4.13 華島万博開催に伴う臨時バス運行について</a><br>
         <a href="news_20250101.html">2025.1.1 テストメアハエ</a>
       </div>
-    </div>
+    </section>
   </main>
 
   <nav>
