--- a/news_20250413.html
+++ b/news_20250413.html
@@ -2,19 +2,20 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>華島万博開催に伴う臨時バス運行について | 新桜・海急公式サイト</title>
+  <title>海急公式サイト</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    新桜・海急公式サイト
+    海急公式サイト
   </header>
 
-  <nav>
-    <a href="index.html" class="nav-item">運行情報</a>
-    <a href="#" class="nav-item">路線図（鉄道）</a>
-    <a href="#" class="nav-item">路線図（高速バス・路線バス）</a>
-    <span class="nav-item highlighted">海急の取り組み</span>
+  <nav class="top-nav">
+    <a href="index.html"class="nav-link">運行情報</a>
+    <a href="#" class="nav-link">路線図（鉄道）</a>
+    <a href="#" class="nav-link">路線図（高速バス・路線バス）</a>
+    <a href="#" class="nav-link">海急の取り組み</a>
+    <a href="access.html" class="nav-link">主要駅からのアクセス</a>
   </nav>
 
   <main>
@@ -22,30 +23,39 @@
       <h2>2025.4.13 華島万博開催に伴う臨時バス運行について</h2>
       <p>本日4/13から華島万博がドリームアイランドで開催されることに伴って、臨時シャトルバスを運行いたします。</p>
 
-      <h3>始発駅</h3>
-      <ul>
-        <li>新海場駅</li>
-        <li>佐華駅</li>
-        <li>北海場駅</li>
-        <li>石崎駅</li>
-      </ul>
+      <div class="info-box">
+        <h3>始発駅</h3>
+        <ul>
+          <li>新海場駅</li>
+          <li>佐華駅</li>
+          <li>北海場駅</li>
+          <li>石崎駅</li>
+        </ul>
+      </div>
 
-      <h3>経由駅</h3>
-      <p>海橋町駅（※北海場始発のみ）</p>
+      <div class="info-box">
+        <h3>経由駅</h3>
+        <p>海橋町駅（※北海場始発のみ）</p>
+      </div>
 
-      <h3>予約等</h3>
-      <p>予約等は不要で、全車自由席です。</p>
+      <div class="info-box">
+        <h3>予約等</h3>
+        <p>予約等は不要で、全車自由席です。</p>
+      </div>
 
-      <h3>混雑予想</h3>
-      <p>大変混雑することが予想されますので、新海場駅からご利用のお客様は、地下鉄も合わせてご利用ください。</p>
+      <div class="info-box">
+        <h3>混雑予想</h3>
+        <p>大変混雑することが予想されますので、新海場駅からご利用のお客様は、地下鉄も合わせてご利用ください。</p>
+      </div>
     </div>
   </main>
 
-  <nav>
-    <a href="index.html" class="nav-item">運行情報</a>
-    <a href="#" class="nav-item">路線図（鉄道）</a>
-    <a href="#" class="nav-item">路線図（高速バス・路線バス）</a>
-    <span class="nav-item highlighted">海急の取り組み</span>
+  <nav class="bottom-nav">
+    <a href="index.html"class="nav-link">運行情報</a>
+    <a href="#" class="nav-link">路線図（鉄道）</a>
+    <a href="#" class="nav-link">路線図（高速バス・路線バス）</a>
+    <a href="#" class="nav-link">海急の取り組み</a>
+    <a href="access.html" class="nav-link">主要駅からのアクセス</a>
   </nav>
 
   <footer>
