--- a/company-info.html
+++ b/company-info.html
@@ -53,7 +53,7 @@
       海急グループの航空事業は、石崎空港、広崎空港、丸府斗空港を拠点とし、多様な路線網を展開しています。<br>
       国内外を結ぶ空の交通網を通じて、安全かつ迅速に人々と貨物の輸送を担い、地域経済の発展に貢献しています。
       </p>
-      <img src="company-aircraft" alt="航空の画像">
+      <img src="company-aircraft.jpg" alt="航空の画像">
     </section>
   </main>
 
