--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
       </section>
 
       <section class="business">
+
+        <h3>建設事業</h3>
+        <img src="https://via.placeholder.com/800x300" alt="建設の写真">
+        <p>
+          海急重工では、鉄道や高速道路、ビルなど、幅広いインフラの建設を手がけています。
+          新海場や広崎エリアを中心に、新桜全域で都市開発を推進しており、
+          海急海浜線・新海場新幹線・地下鉄などの多彩な路線を通じて、
+          大都市と郊外を快適につなぐ輸送ネットワークを支えています。
+          <a href="construction-info.html">建設事業に関する詳細はこちら</a>
+        </p>
+
         <h3>鉄道事業</h3>
         <img src="https://via.placeholder.com/800x300" alt="鉄道の写真">
         <p>
